# moveitpy_pkg

./: package.xml  setup.cfg  setup.py
config/: motion_planning_python_api_ur.yaml
launch/: test_moveitpy.launch.py
moveitpy_pkg/: motion_planning_python_api_tutorial_ur.py
